--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,108 +1,79 @@
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-.animated-fast {
-  -webkit-animation-duration: .5s;
-  animation-duration: .5s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.animated.infinite {
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-}
-
-.animated.hinge {
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
-}
-
-.animated.bounceIn,
-.animated.bounceOut {
-  -webkit-animation-duration: .75s;
-  animation-duration: .75s;
-}
-
-.animated.flipOutX,
-.animated.flipOutY {
-  -webkit-animation-duration: .75s;
-  animation-duration: .75s;
-}
-
-.js .animate-box {
-  opacity: 0;
-}
-
 .services {
-  position: relative;
-  padding: 30px;
-  margin-bottom: 60px;
-  background: #fff;
-  border: 1px solid rgbs(#000, 0.2);
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  border-radius: 4px;
+    position: relative;
+    padding: 30px;
+    margin-bottom: 60px;
+    background: #fff;
+    border: 1px solid rgbs(#000, 0.2);
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    border-radius: 4px;
 }
+
 .services h3 a {
-  color: #000;
+    color: #000;
 }
+
 .services .icon {
-  width: 90px;
-  height: 90px;
-  background: #F95959;
-  display: table;
-  text-align: center;
-  margin: -75px auto 0 auto;
-  margin-bottom: 30px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
+    width: 90px;
+    height: 90px;
+    background: #F95959;
+    display: table;
+    text-align: center;
+    margin: -75px auto 0 auto;
+    margin-bottom: 30px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
 }
+
 @media screen and (max-width: 992px) {
-  .services .icon {
-    margin: 0 auto 30px auto;
-  }
+    .services .icon {
+        margin: 0 auto 30px auto;
+    }
 }
+
 .services .icon i {
-  display: table-cell;
-  vertical-align: middle;
-  height: 90px;
-  font-size: 40px;
-  line-height: 40px;
-  color: #fff;
+    display: table-cell;
+    vertical-align: middle;
+    height: 90px;
+    font-size: 40px;
+    line-height: 40px;
+    color: #fff;
 }
-.services:hover, .services:focus {
-  -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
-  -ms-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
-  -o-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+
+.services:hover,
+.services:focus {
+    -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+    -ms-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+    -o-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
 }
-.services:hover .icon, .services:focus .icon {
-  background: #007CB9;
-  -webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
-  -moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
-  -ms-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
-  -o-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
-  box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
+
+.services:hover .icon,
+.services:focus .icon {
+    background: #007CB9;
+    -webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
+    -ms-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
+    -o-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
+    box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
 }
-.services:hover h3 a, .services:focus h3 a {
-  color: #F95959;
+
+.services:hover h3 a,
+.services:focus h3 a {
+    color: #F95959;
 }
 
 #steps {
@@ -396,7 +367,6 @@
     .tabphone {
         display: none;
     }
-
     .col-sm-1-bs,
     .col-sm-2-bs,
     .col-sm-3-bs,
