--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,5 +1,5 @@
 .card-heading {
-    margin-bottom: 5em;
+    margin-bottom: 5em !important;
 }
 
 #cards {
@@ -14,7 +14,7 @@
 .services {
     position: relative;
     padding: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 60px !important;
     background: #fff;
     border: 1px solid rgbs(#000, 0.2);
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
