--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -27,7 +27,12 @@
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     border-radius: 4px;
-    height: 230px;
+}
+
+@media (min-width: 768px) {
+    .services {
+        height: 230px;
+    }
 }
 
 .services h3 a {
