changing to sc brand colors

--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -42,7 +42,7 @@
 .services .icon {
     width: 90px;
     height: 90px;
-    background: #F95959;
+    background: #45769C;
     display: table;
     text-align: center;
     margin: -75px auto 0 auto;
