--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,3 +1,9 @@
+.profile-circle>img {
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+}
+
 .carousel {
     position: relative;
 }
@@ -11,9 +17,9 @@
 .carousel-inner>.item {
     display: none;
     position: relative;
-    -webkit-transition: 1s ease-in-out left;
-    -o-transition: 1s ease-in-out left;
-    transition: 1s ease-in-out left;
+    -webkit-transition: opacity 1s ease-in-out left;
+    -o-transition: opacity 1s ease-in-out left;
+    transition: opacity 1s ease-in-out left;
 }
 
 .carousel-inner>.item>img,
