--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,7 +1,12 @@
-.profile-circle>img {
-    width: 100%;
-    height: 100%;
-    border-radius: 100px;
+.testimonial-name {
+    margin-bottom: -10px;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 2px;
+}
+
+.testimonial-position {
+    font-size: 1em;
 }
 
 .carousel {
