--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,12 +1,12 @@
 .testimonial-name {
-    margin-bottom: -10px;
+    margin-bottom: -10px !important;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 16px !important;
     letter-spacing: 2px;
 }
 
 .testimonial-position {
-    font-size: 1em;
+    font-size: 1em !important;
 }
 
 .carousel {
