--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,3 +1,12 @@
+.location-breakdown img {
+    width: 200px;
+    margin-bottom: 20px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+}
+
 .testimonial-name {
     margin-bottom: -10px !important;
     text-transform: uppercase;
