--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -430,7 +430,7 @@ a.icon-link {
 
 .services:hover .icon,
 .services:focus .icon {
-    background: #3B81B6;
+    background: #3886C3;
     -webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
     -moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
     -ms-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.13);
