changed color of carousel indicators

--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -324,7 +324,7 @@
 }
 
 #fade-quote-carousel.carousel .carousel-indicators>li {
-    background-color: #e84a64;
+    background-color: #5EB2F2;
     border: none;
 }
 
