--- a/style - Dates and Locations.css
+++ b/style - Dates and Locations.css
@@ -1,140 +1,243 @@
 /*    --------------------------------------------------
 	:: General
 	-------------------------------------------------- */
+
 body {
-	font-family: 'Open Sans', sans-serif;
-	color: #353535;
+    font-family: 'Open Sans', sans-serif;
+    color: #353535;
 }
+
 .content h1 {
-	text-align: center;
+    text-align: center;
 }
+
 .content .content-footer p {
-	color: #6d6d6d;
+    color: #6d6d6d;
     font-size: 12px;
     text-align: center;
 }
+
 .content .content-footer p a {
-	color: inherit;
-	font-weight: bold;
+    color: inherit;
+    font-weight: bold;
 }
+
 
 /*	--------------------------------------------------
 	:: Table Filter
 	-------------------------------------------------- */
+
 .panel {
-	border: 1px solid #ddd;
-	background-color: #fcfcfc;
+    border: 1px solid #ddd;
+    background-color: #fcfcfc;
 }
+
 .panel .btn-group {
-	margin: 15px 0 30px;
+    margin: 15px 0 30px;
 }
+
 .panel .btn-group .btn {
-	transition: background-color .3s ease;
+    transition: background-color .3s ease;
 }
+
 .table-filter {
-	background-color: #fff;
-	border-bottom: 1px solid #eee;
+    background-color: #fff;
+    border-bottom: 1px solid #eee;
 }
+
 .table-filter tbody tr:hover {
-	cursor: pointer;
-	background-color: #eee;
+    cursor: pointer;
+    background-color: #eee;
 }
+
 .table-filter tbody tr td {
-	padding: 10px;
-	vertical-align: middle;
-	border-top-color: #eee;
+    padding: 10px;
+    vertical-align: middle;
+    border-top-color: #eee;
 }
+
 .table-filter tbody tr.selected td {
-	background-color: #eee;
+    background-color: #eee;
 }
+
 .table-filter tr td:first-child {
-	width: 38px;
+    width: 38px;
 }
+
 .table-filter tr td:nth-child(2) {
-	width: 35px;
+    width: 35px;
 }
+
 .ckbox {
-	position: relative;
+    position: relative;
 }
+
 .ckbox input[type="checkbox"] {
-	opacity: 0;
+    opacity: 0;
 }
+
 .ckbox label {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
 .ckbox label:before {
-	content: '';
-	top: 1px;
-	left: 0;
-	width: 18px;
-	height: 18px;
-	display: block;
-	position: absolute;
-	border-radius: 2px;
-	border: 1px solid #bbb;
-	background-color: #fff;
+    content: '';
+    top: 1px;
+    left: 0;
+    width: 18px;
+    height: 18px;
+    display: block;
+    position: absolute;
+    border-radius: 2px;
+    border: 1px solid #bbb;
+    background-color: #fff;
 }
-.ckbox input[type="checkbox"]:checked + label:before {
-	border-color: #2BBCDE;
-	background-color: #2BBCDE;
+
+.ckbox input[type="checkbox"]:checked+label:before {
+    border-color: #2BBCDE;
+    background-color: #2BBCDE;
 }
-.ckbox input[type="checkbox"]:checked + label:after {
-	top: 3px;
-	left: 3.5px;
-	content: '\e013';
-	color: #fff;
-	font-size: 11px;
-	font-family: 'Glyphicons Halflings';
-	position: absolute;
+
+.ckbox input[type="checkbox"]:checked+label:after {
+    top: 3px;
+    left: 3.5px;
+    content: '\e013';
+    color: #fff;
+    font-size: 11px;
+    font-family: 'Glyphicons Halflings';
+    position: absolute;
 }
+
 .table-filter .star {
-	color: #ccc;
-	text-align: center;
-	display: block;
+    color: #ccc;
+    text-align: center;
+    display: block;
 }
+
 .table-filter .star.star-checked {
-	color: #F0AD4E;
+    color: #F0AD4E;
 }
+
 .table-filter .star:hover {
-	color: #ccc;
+    color: #ccc;
 }
+
 .table-filter .star.star-checked:hover {
-	color: #F0AD4E;
+    color: #F0AD4E;
 }
+
 .table-filter .media-photo {
-	width: 35px;
+    width: 35px;
 }
+
 .table-filter .media-body {
     display: block;
     /* Had to use this style to force the div to expand (wasn't necessary with my bootstrap version 3.3.6) */
 }
+
 .table-filter .media-meta {
-	font-size: 11px;
-	color: #999;
+    font-size: 11px;
+    color: #999;
 }
+
 .table-filter .media .title {
-	color: #2BBCDE;
-	font-size: 14px;
-	font-weight: bold;
-	line-height: normal;
-	margin: 0;
+    color: #2BBCDE;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: normal;
+    margin: 0;
 }
+
 .table-filter .media .title span {
-	font-size: .8em;
-	margin-right: 20px;
+    font-size: .8em;
+    margin-right: 20px;
 }
+
 .table-filter .media .title span.pagado {
-	color: #5cb85c;
+    color: #5cb85c;
 }
+
 .table-filter .media .title span.pendiente {
-	color: #f0ad4e;
+    color: #f0ad4e;
 }
+
 .table-filter .media .title span.cancelado {
-	color: #d9534f;
+    color: #d9534f;
 }
+
 .table-filter .media .summary {
-	font-size: 14px;
+    font-size: 14px;
+}
+
+
+/*bootsnippet theme http://bootsnipp.com/snippets/featured/material-design-tab-style 
+
+or could use http://bootsnipp.com/snippets/featured/bootstrap-line-tabs-by-keenthemes
+
+*/
+
+.nav-tabs {
+    border-bottom: 2px solid #DDD;
+}
+
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:focus,
+.nav-tabs>li.active>a:hover {
+    border-width: 0;
+}
+
+.nav-tabs>li>a {
+    border: none;
+    color: #666;
+}
+
+.nav-tabs>li.active>a,
+.nav-tabs>li>a:hover {
+    border: none;
+    color: #4285F4 !important;
+    background: transparent;
+}
+
+.nav-tabs>li>a::after {
+    content: "";
+    background: #4285F4;
+    height: 2px;
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    bottom: -1px;
+    transition: all 250ms ease 0s;
+    transform: scale(0);
+}
+
+.nav-tabs>li.active>a::after,
+.nav-tabs>li:hover>a::after {
+    transform: scale(1);
+}
+
+.tab-nav>li>a::after {
+    background: #21527d none repeat scroll 0% 0%;
+    color: #fff;
+}
+
+.tab-pane {
+    padding: 15px 0;
+}
+
+.tab-content {
+    padding: 20px
+}
+
+.card {
+    background: #FFF none repeat scroll 0% 0%;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+    margin-bottom: 30px;
+}
+
+body {
+    background: #EDECEC;
+    padding: 50px
 }
