--- a/What's New Section.css
+++ b/What's New Section.css
@@ -1,3 +1,25 @@
+.icon-hold {
+    width: 112px;
+    height: 112px;
+    display: table;
+    margin: 0 auto 30px auto;
+    background: rgba(158, 207, 245, 0.36);
+    border-radius: 50%;
+}
+
+.icon-hold i {
+    position: relative;
+    top: -1px;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 50px;
+    color: #45769C;
+}
+
+.nav-item-5 {
+    width: 20%;
+}
+
 .service-box {
     max-width: 400px;
     margin: 50px auto 0
@@ -11,6 +33,69 @@
 
 .service-box p {
     margin-bottom: 0
+}
+
+.tabs-3 {
+    text-align: center;
+}
+
+.tabs-5 {
+    text-align: center;
+}
+
+
+/* Float Shadow */
+
+.hvr-float-shadow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    position: relative;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+.hvr-float-shadow:before {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    content: '';
+    top: 100%;
+    left: 5%;
+    height: 10px;
+    width: 90%;
+    opacity: 0;
+    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+    /* W3C */
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform, opacity;
+    transition-property: transform, opacity;
+}
+
+.hvr-float-shadow:hover,
+.hvr-float-shadow:focus,
+.hvr-float-shadow:active {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+    /* move the element up by 5px */
+}
+
+.hvr-float-shadow:hover:before,
+.hvr-float-shadow:focus:before,
+.hvr-float-shadow:active:before {
+    opacity: 1;
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+    /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
 }
 
 .tabs-3 {
@@ -614,6 +699,8 @@ a.icon-link {
     color: #fff;
 }
 
+
+/*commented out for hvr-float-shadow
 .services:hover,
 .services:focus {
     -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
@@ -622,6 +709,7 @@ a.icon-link {
     -o-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
 }
+*/
 
 .services:hover .icon,
 .services:focus .icon {
