--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -1,6 +1,303 @@
-.q_tabs.horizontal .tabs-nav li:first-child a {
-    padding-left: 14px !important;
+@media (max-width: 768px) {
+    #steps {
+        margin-top: 25px;
+    }
 }
+
+li.nav-item.waves-effect.waves-light.nav-item-5.active {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+li.nav-item.waves-effect.waves-light.nav-item-3.active {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.icon-hold {
+    width: 112px;
+    height: 112px;
+    display: table;
+    margin: 0 auto 30px auto;
+    background: rgba(158, 207, 245, 0.36);
+    border-radius: 50%;
+}
+
+.icon-hold i {
+    position: relative;
+    top: -1px;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 50px;
+    color: #45769C;
+}
+
+.nav-item-5 {
+    width: 20%;
+}
+
+.nav-item-3 {
+    width: 33.3%;
+}
+
+.service-box {
+    max-width: 400px;
+    margin: 50px auto 0
+}
+
+@media (min-width:992px) {
+    .service-box {
+        margin: 20px auto 0
+    }
+}
+
+.service-box p {
+    margin-bottom: 0
+}
+
+.tabs-3 {
+    text-align: center;
+}
+
+.tabs-5 {
+    text-align: center;
+}
+
+
+/* Float Shadow */
+
+.hvr-float-shadow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    position: relative;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+.hvr-float-shadow:before {
+    pointer-events: none;
+    position: absolute;
+    z-index: -1;
+    content: '';
+    top: 100%;
+    left: 5%;
+    height: 10px;
+    width: 90%;
+    opacity: 0;
+    background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+    /* W3C */
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform, opacity;
+    transition-property: transform, opacity;
+}
+
+.hvr-float-shadow:hover,
+.hvr-float-shadow:focus,
+.hvr-float-shadow:active {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+    /* move the element up by 5px */
+}
+
+.hvr-float-shadow:hover:before,
+.hvr-float-shadow:focus:before,
+.hvr-float-shadow:active:before {
+    opacity: 1;
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+    /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
+}
+
+.tabs-3 {
+    text-align: center;
+}
+
+.nav-tabs {
+    border: 0;
+    padding: .7rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: -20px;
+    z-index: 2;
+    position: relative;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .19);
+}
+
+.red {
+    background-color: #f44336 !important;
+}
+
+.nav {
+    margin-bottom: 0;
+    list-style: none;
+}
+
+ul {
+    margin-top: 0;
+}
+
+.nav-tabs::after {
+    display: table;
+}
+
+.nav-pills::after,
+.nav-tabs::after,
+.navbar::after {
+    clear: both;
+    content: "";
+}
+
+.nav-tabs .nav-item {
+    float: left;
+    margin-bottom: -1px;
+}
+
+.tabs-3 li {
+    width: 33.3%;
+}
+
+.waves-effect {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 1;
+}
+
+.pswp__container,
+.pswp__img,
+.waves-effect,
+a,
+html {
+    -webkit-tap-highlight-color: transparent;
+}
+
+ul li {
+    list-style-type: none;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+.nav-tabs .nav-item.open .nav-link,
+.nav-tabs .nav-item.open .nav-link:focus,
+.nav-tabs .nav-item.open .nav-link:hover,
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-link.active:focus,
+.nav-tabs .nav-link.active:hover {
+    background-color: rgba(255, 255, 255, .2);
+    color: #fff;
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -o-transition: all 1s;
+    -ms-transition: all 1s;
+    transition: all 1s;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+}
+
+.nav-tabs .nav-link {
+    padding: 10em;
+    border-top-right-radius: .25rem;
+    border-top-left-radius: .25rem;
+}
+
+.nav-link:focus,
+.nav-link:hover {
+    text-decoration: none;
+}
+
+.tab-content {
+    padding: 2rem 1rem 1rem;
+    z-index: 1;
+}
+
+.card {
+    border: 0;
+}
+
+.card {
+    position: relative;
+    display: block;
+    background-color: #fff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+}
+
+.card,
+.card-title {
+    margin-bottom: .75rem;
+}
+
+.tab-content>.tab-pane {
+    display: none;
+}
+
+.tab-content>.active {
+    display: block;
+}
+
+.fade.in {
+    opacity: 1;
+}
+
+.fade {
+    opacity: 0;
+    -webkit-transition: opacity .15s linear;
+    -o-transition: opacity .15s linear;
+    transition: opacity .15s linear;
+}
+
+.waves-effect {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 1;
+}
+
+.waves-effect {
+    -webkit-tap-highlight-color: transparent;
+}
+
+[role=button],
+a,
+area,
+button,
+input,
+label,
+select,
+summary,
+textarea {
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+}
+
+
+/*rest of stuff*/
 
 .location-breakdown img {
     width: 200px;
@@ -288,7 +585,7 @@
     display: block !important;
 }
 
-.carousel-inner {
+.carousel-inner.testimonial {
     display: block !important;
 }
 
@@ -324,7 +621,7 @@
 }
 
 #fade-quote-carousel.carousel .carousel-indicators>li {
-    background-color: #5EB2F2;
+    background-color: #e84a64;
     border: none;
 }
 
@@ -419,6 +716,8 @@ a.icon-link {
     color: #fff;
 }
 
+
+/*commented out for hvr-float-shadow
 .services:hover,
 .services:focus {
     -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
@@ -427,6 +726,7 @@ a.icon-link {
     -o-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
 }
+*/
 
 .services:hover .icon,
 .services:focus .icon {
