--- a/Position Headers/Style.css
+++ b/Position Headers/Style.css
@@ -1022,6 +1022,8 @@ a.pos-hdr-btn:hover {
     border: 2px solid #97ABBD;
 }
 
+
+/*not needed
 .hdr-or {
     padding-left: 10px;
     padding-right: 10px;
@@ -1053,4 +1055,14 @@ a .hdr-icon-right {
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
     font-size: 1.1em;
+}
+*/
+
+@media (max-width:768px) {
+    .pos-hdr {
+        text-align: center;
+    }
+    .pos-txt {
+        margin-top: 25px;
+    }
 }
