--- a/Position Headers/Site Administrator/Style.css
+++ b/Position Headers/Site Administrator/Style.css
@@ -1023,7 +1023,6 @@ a.pos-hdr-btn:hover {
     border: 2px solid #97ABBD;
 }
 
-
 /*not needed
 .hdr-or {
     padding-left: 10px;
@@ -1063,9 +1062,11 @@ a .hdr-icon-right {
     .pos-hdr {
         text-align: center;
     }
+    
     .pos-txt {
         margin-top: 25px;
     }
+
     .pos-img {
         margin-left: auto;
         margin-right: auto;
@@ -1074,6 +1075,473 @@ a .hdr-icon-right {
 
 @media (max-width: 576px) {
     h2.font-weight-normal {
-        font-size: 3em;
+        font-size: 3em !important;
+    }
+}
+
+.ls-gpuhack {
+    background-color: #ffffff;
+}
+
+.qbutton:hover {
+    border-color: #34618c !important;
+    background-color: #34618c !important;
+}
+
+.qbutton.white:hover {
+    border-color: #34618c;
+    background-color: #34618c
+}
+
+a.view_more_button:hover {
+    border-color: #34619c !important;
+    background-color: #34618c !important;
+}
+
+a.back_to_available_positions_button:hover {
+    border-color: #34619c !important;
+    background-color: #34618c !important;
+}
+
+a.back_to_available_positions_button_2:hover {
+    border-color: #34619c !important;
+    background-color: #34618c !important;
+}
+
+a.back_to_available_positions_button {
+    padding: 0px 8px 0px 8px;
+    font-size: 1em;
+    color: white;
+    background: #333745;
+    border-color: #ffffff;
+    border: 2px solid #ffffff;
+    box-sizing: initial !important;
+    color: #303030;
+    display: inline-block;
+    font-style: normal;
+    font-weight: 700;
+    height: 39px;
+    letter-spacing: 1px;
+    line-height: 39px;
+    margin: 0;
+    outline: 0 none;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: uppercase;
+    transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+    width: auto;
+    background-color: rgb(51, 55, 69);
+    font-family: Arial;
+    cursor: pointer;
+    white-space: nowrap;
+    border-radius: 0px;
+    visibility: visible;
+    z-index: 0;
+    transform-origin: 50% 50% 0px;
+    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    opacity: 1;
+}
+
+a.back_to_available_positions_button_2 {
+    padding: 0px 23px 0px 23px;
+    font-size: 1em;
+    color: white;
+    background: #333745;
+    border-color: #ffffff;
+    border: 2px solid #ffffff;
+    box-sizing: initial !important;
+    color: #303030;
+    display: inline-block;
+    font-style: normal;
+    font-weight: 700;
+    height: 39px;
+    letter-spacing: 1px;
+    line-height: 39px;
+    margin: 0;
+    outline: 0 none;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: uppercase;
+    transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+    width: auto;
+    background-color: rgb(51, 55, 69);
+    font-family: Arial;
+    cursor: pointer;
+    white-space: nowrap;
+    border-radius: 0px;
+    visibility: visible;
+    z-index: 0;
+    transform-origin: 50% 50% 0px;
+    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    opacity: 1;
+}
+
+a.view_more_button {
+        color: white;
+        background: #f2d03b;
+        border-color: #ffffff;
+        border: 2px solid #ffffff;
+        border-radius: 0px;
+        box-sizing: initial !important;
+        cursor: pointer;
+        display: inline-block;
+        font-size:1em;
+        font-style: normal;
+        font-weight: 700;
+        height: 39px;
+        letter-spacing: 1px;
+        line-height: 39px;
+        margin: 0;
+        outline: 0 none;
+        padding: 0 8px 0px 8px;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: none;
+        text-transform: uppercase;
+        transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+        white-space: nowrap;
+        width: auto;
+        background-color: #f2d03b;
+        background-color: rgb(242, 208, 59);
+        font-family: Arial;
+        visibility: visible;
+        z-index: 0;
+        transform-origin: 50% 50% 0px;
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+        opacity: 1;
+}
+
+.image_row_1 {
+    display: none;
+}
+
+.containing_row {
+    position: absolute;
+}
+
+
+/*small devices (mobile phones)*/
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+    div.q_slider {
+        display: none;
+    }
+    a.back_to_available_positions_button {
+        padding: 0px 8px 0px 8px;
+        color: white;
+        background: #333745;
+        border-color: #ffffff;
+        border: 2px solid #ffffff;
+        box-sizing: initial !important;
+        color: #303030;
+        display: inline-block;
+        font-style: normal;
+        font-weight: 700;
+        height: 39px;
+        letter-spacing: 1px;
+        line-height: 39px;
+        margin: 0;
+        outline: 0 none;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: none;
+        text-transform: uppercase;
+        transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+        width: auto;
+        background-color: rgb(51, 55, 69);
+        font-family: Arial;
+        cursor: pointer;
+        white-space: nowrap;
+        border-radius: 0px;
+        visibility: visible;
+        z-index: 0;
+        transform-origin: 50% 50% 0px;
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+        opacity: 1;
+    }
+    a.view_more_button {
+        color: white;
+        background: #f2d03b;
+        border-color: #ffffff;
+        border: 2px solid #ffffff;
+        border-radius: 0px;
+        box-sizing: initial !important;
+        cursor: pointer;
+        display: inline-block;
+        font-style: normal;
+        font-weight: 700;
+        height: 39px;
+        letter-spacing: 1px;
+        line-height: 39px;
+        margin: 0;
+        outline: 0 none;
+        padding: 0 8px 0px 8px;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: none;
+        text-transform: uppercase;
+        transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+        white-space: nowrap;
+        width: auto;
+        background-color: #f2d03b;
+        background-color: rgb(242, 208, 59);
+        font-family: Arial;
+        visibility: visible;
+        z-index: 0;
+        transform-origin: 50% 50% 0px;
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+        opacity: 1;
+    }
+    .empty_space_1 {
+        height: 70px !important;
+    }
+    .single_image_1,
+    .single_image_2,
+    .single_image_3,
+    .single_image_4,
+    .single_image_5,
+    .header_1,
+    .header_2,
+    .empty_space_6 {
+        display: none;
+    }
+}
+    /*iPhone 6 Landscape Only*/
+    @media only screen and (min-width: 375px) and (max-width: 667px) and (orientation: landscape) {
+        span.top_job_description {
+            font-size: 0.8em;
+        }
+        .single_image_1 {
+            display: none;
+        }
+        .image_row_1 {
+            display: block;
+        }
+        .separator_container_1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100px;
+        }
+        .separator_image_container_1 {
+            position: absolute;
+            width: 620px;
+            height: 100px;
+        }
+        .separator_image_1 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 620px;
+            height: 100px;
+        }
+        .separator_text_container_1,
+        .separator_icon_container_1,
+        .separator_icon_container_2 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100px;
+            position: absolute;
+        }
+        .separator_text_1 {
+            top: 15%;
+            position: absolute !important;
+            font-family: Arial;
+            font-size: 2em;
+            color: #005981;
+        }
+        .separator_text_2 {
+            bottom: 15%;
+            position: absolute !important;
+            font-family: Arial;
+            font-size: 2em;
+            color: #005981;
+        }
+        .fa-briefcase {
+            color: #fff;
+            left: 10%;
+            position: absolute;
+        }
+        .fa-check-circle-o {
+            color: #fff;
+            left: 85%;
+            position: absolute;
+        }
+        ul,
+        p {
+            font-size: 0.6em;
+            line-height: 2em;
+        }
+    }
+
+/*medium devices (tablets)*/
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+    div.q_slider,
+    .header_1,
+    .header_2 {
+        display: none;
+    }
+    a.back_to_available_positions_button {
+        padding: 0px 8px 0px 8px;
+        font-size: 1em;
+        color: white;
+        background: #333745;
+        border-color: #ffffff;
+        border: 2px solid #ffffff;
+        box-sizing: initial !important;
+        color: #303030;
+        display: inline-block;
+        font-style: normal;
+        font-weight: 700;
+        height: 39px;
+        letter-spacing: 1px;
+        line-height: 39px;
+        margin: 0;
+        outline: 0 none;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: none;
+        text-transform: uppercase;
+        transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+        width: auto;
+        background-color: rgb(51, 55, 69);
+        font-family: Arial;
+        cursor: pointer;
+        white-space: nowrap;
+        border-radius: 0px;
+        visibility: visible;
+        z-index: 0;
+        transform-origin: 50% 50% 0px;
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+        opacity: 1;
+    }
+    a.view_more_button {
+        color: white;
+        background: #f2d03b;
+        border-color: #ffffff;
+        border: 2px solid #ffffff;
+        border-radius: 0px;
+        box-sizing: initial !important;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 1em;
+        font-style: normal;
+        font-weight: 700;
+        height: 39px;
+        letter-spacing: 1px;
+        line-height: 39px;
+        margin: 0;
+        outline: 0 none;
+        padding: 0 8px 0px 8px;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        text-shadow: none;
+        text-transform: uppercase;
+        transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+        white-space: nowrap;
+        width: auto;
+        background-color: #f2d03b;
+        background-color: rgb(242, 208, 59);
+        font-family: Arial;
+        visibility: visible;
+        z-index: 0;
+        transform-origin: 50% 50% 0px;
+        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+        opacity: 1;
+    }
+    .empty_space_1 {
+        height: 70px !important;
+    }
+    span.top_job_description {
+        font-size: 0.8em;
+    }
+    .image_row_1 {
+        display: block;
+    }
+    .single_image_2 {
+        width: 50%;
+    }
+    .separator_container_1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100px;
+    }
+    .separator_image_container_1 {
+        position: absolute;
+        width: 620px;
+        height: 100px;
+    }
+    .separator_image_1 {
+        margin-left: auto;
+        margin-right: auto;
+        width: 620px;
+        height: 100px;
+    }
+    .separator_text_container_1,
+    .separator_icon_container_1,
+    .separator_icon_container_2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100px;
+        position: absolute;
+    }
+    .separator_text_1 {
+        top: 15%;
+        position: absolute !important;
+        font-family: Arial;
+        font-size: 2em;
+        color: #005981;
+    }
+    .separator_text_2 {
+        bottom: 15%;
+        position: absolute !important;
+        font-family: Arial;
+        font-size: 2em;
+        color: #005981;
+    }
+    .fa-briefcase {
+        color: #fff;
+        left: 10%;
+        position: absolute;
+    }
+    .fa-check-circle-o {
+        color: #fff;
+        left: 85%;
+        position: absolute;
+    }
+    ul,
+    p {
+        font-size: 1em;
+        line-height: 2em;
+    }
+    div.wpb_column.vc_column_container.vc_col-sm-3 {
+        width: 100%;
+    }
+    .single_image_1,
+    .single_image_2,
+    .single_image_3,
+    .single_image_4,
+    .single_image_5,
+    .empty_space_6 {
+        display: none;
+    }
+    .vc_col-sm-8,
+    .vc_col-sm-9 {
+        width: 100%;
     }
 }
