--- a/Position Headers/Site Administrator/Style.css
+++ b/Position Headers/Site Administrator/Style.css
@@ -1017,11 +1017,22 @@ a.pos-hdr-btn:hover {
     border: 2px solid #45769C;
 }
 
+a.pos-hdr-btn-success:hover {
+    background: #194E77;
+    border: 2px solid #194E77;
+}
+
 .pos-hdr-btn-back {
     background: #97ABBD;
     color: #fff;
     border: 2px solid #97ABBD;
 }
+
+a.pos-hdr-btn-back:hover {
+    background: #496B89;
+    border: 2px solid #496B89;
+}
+
 
 /*not needed
 .hdr-or {
@@ -1062,11 +1073,9 @@ a .hdr-icon-right {
     .pos-hdr {
         text-align: center;
     }
-    
     .pos-txt {
         margin-top: 25px;
     }
-
     .pos-img {
         margin-left: auto;
         margin-right: auto;
@@ -1181,39 +1190,39 @@ a.back_to_available_positions_button_2 {
 }
 
 a.view_more_button {
-        color: white;
-        background: #f2d03b;
-        border-color: #ffffff;
-        border: 2px solid #ffffff;
-        border-radius: 0px;
-        box-sizing: initial !important;
-        cursor: pointer;
-        display: inline-block;
-        font-size:1em;
-        font-style: normal;
-        font-weight: 700;
-        height: 39px;
-        letter-spacing: 1px;
-        line-height: 39px;
-        margin: 0;
-        outline: 0 none;
-        padding: 0 8px 0px 8px;
-        position: relative;
-        text-align: left;
-        text-decoration: none;
-        text-shadow: none;
-        text-transform: uppercase;
-        transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
-        white-space: nowrap;
-        width: auto;
-        background-color: #f2d03b;
-        background-color: rgb(242, 208, 59);
-        font-family: Arial;
-        visibility: visible;
-        z-index: 0;
-        transform-origin: 50% 50% 0px;
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-        opacity: 1;
+    color: white;
+    background: #f2d03b;
+    border-color: #ffffff;
+    border: 2px solid #ffffff;
+    border-radius: 0px;
+    box-sizing: initial !important;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 700;
+    height: 39px;
+    letter-spacing: 1px;
+    line-height: 39px;
+    margin: 0;
+    outline: 0 none;
+    padding: 0 8px 0px 8px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: uppercase;
+    transition: color 0.1s linear 0s, background-color 0.1s linear 0s, border-color 0.1s linear 0s;
+    white-space: nowrap;
+    width: auto;
+    background-color: #f2d03b;
+    background-color: rgb(242, 208, 59);
+    font-family: Arial;
+    visibility: visible;
+    z-index: 0;
+    transform-origin: 50% 50% 0px;
+    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    opacity: 1;
 }
 
 .image_row_1 {
@@ -1313,77 +1322,82 @@ a.view_more_button {
         display: none;
     }
 }
-    /*iPhone 6 Landscape Only*/
-    @media only screen and (min-width: 375px) and (max-width: 667px) and (orientation: landscape) {
-        span.top_job_description {
-            font-size: 0.8em;
-        }
-        .single_image_1 {
-            display: none;
-        }
-        .image_row_1 {
-            display: block;
-        }
-        .separator_container_1 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100px;
-        }
-        .separator_image_container_1 {
-            position: absolute;
-            width: 620px;
-            height: 100px;
-        }
-        .separator_image_1 {
-            margin-left: auto;
-            margin-right: auto;
-            width: 620px;
-            height: 100px;
-        }
-        .separator_text_container_1,
-        .separator_icon_container_1,
-        .separator_icon_container_2 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100px;
-            position: absolute;
-        }
-        .separator_text_1 {
-            top: 15%;
-            position: absolute !important;
-            font-family: Arial;
-            font-size: 2em;
-            color: #005981;
-        }
-        .separator_text_2 {
-            bottom: 15%;
-            position: absolute !important;
-            font-family: Arial;
-            font-size: 2em;
-            color: #005981;
-        }
-        .fa-briefcase {
-            color: #fff;
-            left: 10%;
-            position: absolute;
-        }
-        .fa-check-circle-o {
-            color: #fff;
-            left: 85%;
-            position: absolute;
-        }
-        ul,
-        p {
-            font-size: 0.6em;
-            line-height: 2em;
-        }
+
+
+/*iPhone 6 Landscape Only*/
+
+@media only screen and (min-width: 375px) and (max-width: 667px) and (orientation: landscape) {
+    span.top_job_description {
+        font-size: 0.8em;
     }
+    .single_image_1 {
+        display: none;
+    }
+    .image_row_1 {
+        display: block;
+    }
+    .separator_container_1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100px;
+    }
+    .separator_image_container_1 {
+        position: absolute;
+        width: 620px;
+        height: 100px;
+    }
+    .separator_image_1 {
+        margin-left: auto;
+        margin-right: auto;
+        width: 620px;
+        height: 100px;
+    }
+    .separator_text_container_1,
+    .separator_icon_container_1,
+    .separator_icon_container_2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100px;
+        position: absolute;
+    }
+    .separator_text_1 {
+        top: 15%;
+        position: absolute !important;
+        font-family: Arial;
+        font-size: 2em;
+        color: #005981;
+    }
+    .separator_text_2 {
+        bottom: 15%;
+        position: absolute !important;
+        font-family: Arial;
+        font-size: 2em;
+        color: #005981;
+    }
+    .fa-briefcase {
+        color: #fff;
+        left: 10%;
+        position: absolute;
+    }
+    .fa-check-circle-o {
+        color: #fff;
+        left: 85%;
+        position: absolute;
+    }
+    ul,
+    p {
+        font-size: 0.6em;
+        line-height: 2em;
+    }
+}
+
 
 /*medium devices (tablets)*/
+
 @media only screen and (min-width: 768px) and (max-width: 992px) {
     div.q_slider,
     .header_1,
