fixes the bridge theme making containers grey

--- a/SC Staff Style 2-20-17.css
+++ b/SC Staff Style 2-20-17.css
@@ -1,3 +1,7 @@
+.content .container {
+    background-color: transparent;
+}
+
 @media (min-width: 992px) {
     .mobile-headers-row {
         display: none;
