changing icon to img

--- a/SC Staff Style 3-24-17.css
+++ b/SC Staff Style 3-24-17.css
@@ -2669,7 +2669,7 @@ a.thumb {
   height: 147px;
 }
 
-.position-card-icon i {
+.position-card-icon img {
   width: 147px;
     height: 147px;
     -webkit-border-radius: 50%;
