Revert "i guess portfolio edits"
This reverts commit 57c552484d10fb5c4d39af40cd18149f26026796.

--- a/Portfolio - 1/Kards10 - Copy/Kards10/css/main.css
+++ b/Portfolio - 1/Kards10 - Copy/Kards10/css/main.css
@@ -1099,7 +1099,7 @@ header .top-bar {
 	min-width: 220px;
 	min-height: 66px;
 	position: absolute;
-	left: 0;
+	left: 90px;
 	top: 0;
 }
 header .logo {
@@ -1119,7 +1119,7 @@ header .logo a {
 	color: transparent;
 	width: 92px;
 	height: 15px;
-	background: url("../images/logo-2.png") no-repeat center;
+	background: url("../images/logo.png") no-repeat center;
 	background-size: 92px 15px;
 }
 
@@ -1267,22 +1267,22 @@ header .logo a {
  */
 @media only screen and (max-width:1024px) {
 	header .top-bar {
-		left: 0;
+		left: 60px;
 	}
 }
 @media only screen and (max-width:768px) {
 	header .top-bar {
-		left: 0;
+		left: 50px;
 	}
 }
 @media only screen and (max-width:600px) {
 	header .top-bar {
-		left: 0;
+		left: 35px;
 	}
 }
 @media only screen and (max-width:400px) {
 	header .top-bar {
-		left: 0;
+		left: 25px;
 	}
 }
 
